--- a/WindowsTools.html
+++ b/WindowsTools.html
@@ -73,7 +73,7 @@
 </table>
 <p>Debug and Verbose levels can generate large volume of logs and are intended for development/troubleshooting only.</p>
 <p>To override global settings for a specific component, create a new key under the root key mentioned above and name it as the executable name, without <code>.exe</code> extension. For example, to change qrexec-agent's log level to Debug, set it like this:</p>
-<p>(image)</p>
+<p><a href="/wiki/attachment/wiki/WindowsTools/qtw-log-level.png"><img src="/wiki/chrome/common/attachment.png" title="No image &quot;qtw-log-level.png&quot; attached to WindowsTools" alt="No image &quot;qtw-log-level.png&quot; attached to WindowsTools" /></a></p>
 <p>Component-specific settings currently available:</p>
 <table>
 <thead>
