--- a/UserDoc.html
+++ b/UserDoc.html
@@ -89,8 +89,11 @@
 <li><a href="/wiki/wiki/AssigningDevices">Assigning PCI Devices to AppVMs</a></li>
 <li><a href="/wiki/wiki/DiskTRIM">Enabling TRIM for SSD disks</a></li>
 <li><a href="/wiki/wiki/NetworkPrinter">Configuring a Network Printer</a></li>
+<li>Proprietary
+<ol>
 <li><a href="/wiki/wiki/InstallNvidiaDriver">How to install an Nvidia driver in dom0</a></li>
 <li><a href="/wiki/wiki/SonyVaioTinkering">Getting Sony Vaio Z laptop to work with Qubes</a></li>
+</ol></li>
 <li>External Links
 <ol>
 <li><a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/e27a57b0eda62f76">​Installing on system with new AMD GPU (missing firmware problem)</a></li>
