--- a/UserDoc.html
+++ b/UserDoc.html
@@ -89,7 +89,7 @@
 <li><a href="/wiki/wiki/AssigningDevices">Assigning PCI Devices to AppVMs</a></li>
 <li><a href="/wiki/wiki/DiskTRIM">Enabling TRIM for SSD disks</a></li>
 <li><a href="/wiki/wiki/NetworkPrinter">Configuring a Network Printer</a></li>
-<li>Proprietary
+<li>Vendor-specific
 <ol>
 <li><a href="/wiki/wiki/InstallNvidiaDriver">How to install an Nvidia driver in dom0</a></li>
 <li><a href="/wiki/wiki/SonyVaioTinkering">Getting Sony Vaio Z laptop to work with Qubes</a></li>
