--- a/UserDoc/SplitGpg.html
+++ b/UserDoc/SplitGpg.html
@@ -9,7 +9,7 @@
 <p><a href="/wiki/attachment/wiki/UserDoc/SplitGpg/r2-split-gpg-1.png"><img src="/wiki/chrome/common/attachment.png" title="No image &quot;r2-split-gpg-1.png&quot; attached to UserDoc/SplitGpg" alt="No image &quot;r2-split-gpg-1.png&quot; attached to UserDoc/SplitGpg" /></a> <a href="/wiki/attachment/wiki/UserDoc/SplitGpg/r2-split-gpg-3.png"><img src="/wiki/chrome/common/attachment.png" title="No image &quot;r2-split-gpg-3.png&quot; attached to UserDoc/SplitGpg" alt="No image &quot;r2-split-gpg-3.png&quot; attached to UserDoc/SplitGpg" /></a></p>
 <h3 id="Currentlimitations">Current limitations</h3>
 <ul>
-<li>Current implementation requires importing of public keys to the vault domain. This opens up an avenue to attack the gpg running in the backend domain via a hypothetical bug in public key importing code. See ticket #474 for more details and plans how to get around this problem, as well as the section on using split GPG with subkeys below.</li>
+<li>Current implementation requires importing of public keys to the vault domain. This opens up an avenue to attack the gpg running in the backend domain via a hypothetical bug in public key importing code. See ticket #474 for more details and plans how to get around this problem, as well as the section on <a href="/wiki/wiki/UserDoc/SplitGpg#Advanced:UsingSplitGPGwithSubkeys">using split GPG with subkeys</a> below.</li>
 </ul>
 <p></p>
 <ul>
