UserDoc/OpenPGP changed
Added SplitGpg deprecation note

--- a/UserDoc/OpenPGP.html
+++ b/UserDoc/OpenPGP.html
@@ -1,3 +1,4 @@
+<p><strong>Note 2014-08-03: This page is deprecated by <a href="/wiki/wiki/UserDoc/SplitGpg">SplitGpg</a>. The content of this page has been integrated into that page.</strong></p>
 <h1 id="UsingOpenPGPinQubes">Using OpenPGP in Qubes</h1>
 <p>One of the main advantages of Qubes is that it allows the user to isolate sensitive data in network-disconnected VMs. This is particularly useful in the case of securing secret keys. Work on split GPG is currently ongoing (#474), but it's still possible to set up a very secure system right now.</p>
 <h2 id="BasicInstructions">Basic Instructions</h2>
