--- a/HCL.html
+++ b/HCL.html
@@ -431,6 +431,13 @@
 <p>3.12.14-4</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/NXIL5rEh65o/rCBf1PYr2jsJ">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/NXIL5rEh65o/rCBf1PYr2jsJ">​Franz Felix</a></p>
+<p>MSI GS60<br /> (i7-4700HQ, Haswell, IGP)</p>
+<p>E16H2IMS.103</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>R2rc1</p>
+<p>3.12.18-1</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/Sz0Nuhi4N0o/jIjFnf2XCKUJ">​Rudd-O</a></p>
 <p>MSI GX660<br /> (i5-460M, PM55, Radeon HD5870)</p>
 <p>1.0L</p>
 <p>Yes</p>
