--- a/WindowsTools.html
+++ b/WindowsTools.html
@@ -10,7 +10,7 @@
 </ul>
 <p>It's probably a good idea to install a VNC server in the VM before installing QTW. If something goes very wrong with the Qubes gui agent, a VNC server should still allow access to the OS.</p>
 <h2 id="Configuration">Configuration</h2>
-<p>Starting from version 2.2.* various aspects of Qubes Tools for Windows (QTW for short) can be configured through registry. Main configuration key is located in <code>HKEY_LOCAL_MACHINE\SOFTWARE\Invisible Things Lab\Qubes Tools</code>. Configuration values set on this level are global to all QTW components. It's possible to override global values with component-specific keys, this is useful mainly for setting log verbosity for troubleshooting. Possible configuration values are:</p>
+<p>Starting from version 2.2.* various aspects of Qubes Tools for Windows can be configured through registry. Main configuration key is located in <code>HKEY_LOCAL_MACHINE\SOFTWARE\Invisible Things Lab\Qubes Tools</code>. Configuration values set on this level are global to all QTW components. It's possible to override global values with component-specific keys, this is useful mainly for setting log verbosity for troubleshooting. Possible configuration values are:</p>
 <table>
 <thead>
 <tr class="header">
@@ -92,6 +92,13 @@
 <td style="text-align: left;">DWORD</td>
 <td style="text-align: left;">Enable experimental feature of the gui agent/qvideo driver: use page table dirty bits to determine changed display regions. This can improve performance but may impact display responsiveness (some changes may not be detected resulting in &quot;stale&quot; image). Gui agent is currently undergoing a significant architectural change and this setting may be removed/not needed in the future.</td>
 <td style="text-align: left;">0</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">wga</td>
+<td style="text-align: left;">DisableCursor</td>
+<td style="text-align: left;">DWORD</td>
+<td style="text-align: left;">Disable cursor in the VM. Useful for integration with Qubes desktop so you don't see two cursors. Can be disabled if you plan to use the VM through a remote desktop connection of some sort.</td>
+<td style="text-align: left;">1</td>
 </tr>
 </tbody>
 </table>
