--- a/WindowsTools.html
+++ b/WindowsTools.html
@@ -90,14 +90,14 @@
 <td style="text-align: left;">wga</td>
 <td style="text-align: left;">UseDirtyBits</td>
 <td style="text-align: left;">DWORD</td>
-<td style="text-align: left;">Enable experimental feature of the gui agent/qvideo driver: use page table dirty bits to determine changed display regions. This can improve performance but may impact display responsiveness (some changes may not be detected resulting in &quot;stale&quot; image). Gui agent is currently undergoing a significant architectural change and this setting may be removed/not needed in the future.</td>
+<td style="text-align: left;">Enable experimental feature of the gui agent/qvideo driver: use page table dirty bits to determine changed display regions. This can improve performance but may impact display responsiveness (some changes may not be detected resulting in &quot;stale&quot; image). Needs VM restart to apply change. Gui agent is currently undergoing a significant architectural change and this setting may be removed/not needed in the future.</td>
 <td style="text-align: left;">0</td>
 </tr>
 <tr class="even">
 <td style="text-align: left;">wga</td>
 <td style="text-align: left;">DisableCursor</td>
 <td style="text-align: left;">DWORD</td>
-<td style="text-align: left;">Disable cursor in the VM. Useful for integration with Qubes desktop so you don't see two cursors. Can be disabled if you plan to use the VM through a remote desktop connection of some sort.</td>
+<td style="text-align: left;">Disable cursor in the VM. Useful for integration with Qubes desktop so you don't see two cursors. Can be disabled if you plan to use the VM through a remote desktop connection of some sort. Needs gui agent restart to apply change (locking OS/logoff should be enough since wga is restarted on desktop change).</td>
 <td style="text-align: left;">1</td>
 </tr>
 </tbody>
