InstallationGuideR2rc2 changed
Fixed update links

--- a/InstallationGuideR2rc2.html
+++ b/InstallationGuideR2rc2.html
@@ -28,7 +28,7 @@
 <p>The installer loads Xen right at the beginning, so chances are high that if you can see the installer's graphical screen, Qubes will work on your system :)</p>
 <p><a href="/wiki/attachment/wiki/InstallationGuideR2rc2/qubes-r2-rc2-installer-welcome.png"><img src="/wiki/chrome/common/attachment.png" title="No image &quot;qubes-r2-rc2-installer-welcome.png&quot; attached to InstallationGuideR2rc2" alt="No image &quot;qubes-r2-rc2-installer-welcome.png&quot; attached to InstallationGuideR2rc2" /></a></p>
 <h2 id="Upgrading">Upgrading</h2>
-<p>Upgrading from Qubes R2 rc1 should be a simple matter of install updates for [SoftwareUpdateDom0 Dom0] and [SoftwareUpdateVM VMs].</p>
+<p>Upgrading from Qubes R2 rc1 should be a simple matter of install updates for <a href="/wiki/wiki/SoftwareUpdateDom0">dom0</a> and <a href="/wiki/wiki/SoftwareUpdateVM">VMs</a>.</p>
 <p>Users of R2 beta 3 should follow instructions on how to upgrade to Qubes R2 rc1 <a href="/wiki/wiki/UpgradeToR2rc1">here</a>.</p>
 <h2 id="Troubleshootingproblemswiththeinstaller">Troubleshooting problems with the installer</h2>
 <p>If the installer fails for some reason, typically because of the graphics card not being correctly supported, it is possible to try booting the installer with a different kernel -- to do that, choose Troubleshooting menu in the Installer Welcome screen, and later choose an option to proceed with one of the kernels provided:</p>
