--- a/QubesDownloads.html
+++ b/QubesDownloads.html
@@ -35,4 +35,5 @@
 <ul>
 <li><a href="http://ftp.fsn.hu/pub/linux/distributions/qubes/">​http://ftp.fsn.hu/pub/linux/distributions/qubes/</a></li>
 <li><a href="http://linuxtracker.org/index.php?page=torrent-details&amp;id=3bdf893771d63bdbe3d83f31e064360ee10f30ec">​http://linuxtracker.org/index.php?page=torrent-details&amp;id=3bdf893771d63bdbe3d83f31e064360ee10f30ec</a></li>
+<li><a href="http://burnbit.com/torrent/303367/Qubes_R2_rc2_x86_64_DVD_iso">​http://burnbit.com/torrent/303367/Qubes_R2_rc2_x86_64_DVD_iso</a></li>
 </ul>
