--- a/UserDoc.html
+++ b/UserDoc.html
@@ -80,6 +80,7 @@
 <ol>
 <li><a href="/wiki/wiki/UserDoc/ConfigFiles">Configuration files</a></li>
 <li><a href="/wiki/wiki/QubesService">Qubes service framework</a></li>
+<li><a href="/wiki/wiki/VMSudo">Note regarding password-less root access in VM</a></li>
 </ol></li>
 </ol></li>
 <li><strong>Hardware</strong>
