--- a/HCL.html
+++ b/HCL.html
@@ -111,6 +111,14 @@
 <p>R2rc1</p>
 <p>3.12.14-4</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/YOE2ds6RVWc/n24INxfu11gJ">​chymian</a></p>
+<p>Dell Inspiron 3521<br /> (i3-3217U, HM76, HD Graphics)</p>
+<p>A12</p>
+<p>Yes</p>
+<p>No</p>
+<p>R2rc1</p>
+<p>3.12.14-4</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/SgUAMvUizp0/WND6yZtYP5cJ">​NetVM hangs computer</a></p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/SgUAMvUizp0/WND6yZtYP5cJ">​Nikita Mikhailov</a></p>
 <p>Dell Latitude E4300<br /> (P9600, GMA 4500MHD, Mobile 4 Series Chipset)</p>
 <p>A24</p>
 <p>Yes</p>
@@ -221,6 +229,12 @@
 <p>R2B2</p>
 <p><a href="https://groups.google.com/d/topic/qubes-users/o_FTsPW6GD8/discussion">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/o_FTsPW6GD8/bjAD-CSpRKsJ">Olivier Médoc</a></p>
+<p>HP EliteBook Folio 9470m<br /> (i5-3437U, Ivy Bridge, HD graphics)</p>
+<p>68IBD Ver. F.47</p>
+<p>R2</p>
+<p>3.12.23-1</p>
+<p>no access to BIOS on this machine</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/iup1MmBFx8Q/hCCAOVwrB2kJ">Paolo Righi</a></p>
 <p>HP Pavilion Sleekbook 14-B030TU<br /> (i5-3317U, Ivy Bridge, Intel HD Graphics)</p>
 <p>F.06</p>
 <p>Yes</p>
@@ -244,6 +258,12 @@
 <p>Yes</p>
 <p>R2B2</p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/kGnZKZ9ILKA/2vpzltNW3K4J">Danny Cautaert</a></p>
+<p>Lenovo Thinkpad T60<br /> (T7600, GMA 950)</p>
+<p>Yes</p>
+<p>No</p>
+<p>R2rc2</p>
+<p>Does not install</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/cpIE1ybuwoA/HDriMPH0vGcJ">saltykremlin</a></p>
 <p>Lenovo Thinkpad T61<br /> (Nvidia Quadro NVS 140M)</p>
 <p>Yes</p>
 <p>No</p>
@@ -431,6 +451,14 @@
 <p>3.12.14-4</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/NXIL5rEh65o/rCBf1PYr2jsJ">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/NXIL5rEh65o/rCBf1PYr2jsJ">​Franz Felix</a></p>
+<p>MSI GP60-2PE<br /> (i5-4200H, Haswell, _HD Graphics)</p>
+<p>E16GHIMS.109</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>R2rc2</p>
+<p>3.12.23-1</p>
+<p>speep doesn't work</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/X0KB-euVJgc/1Aqcb_aNtB0J">Fabian Wloch</a></p>
 <p>MSI GS60<br /> (i7-4700HQ, Haswell, IGP)</p>
 <p>E16H2IMS.103</p>
 <p>Yes</p>
