--- a/WikiStart.html
+++ b/WikiStart.html
@@ -4,7 +4,7 @@
 <ul>
 <li><a href="/wiki/wiki/GettingStarted">Getting Started</a></li>
 <li><a href="/wiki/wiki/QubesScreenshots">Screenshots</a></li>
-<li><a href="/wiki/wiki/QubesArchitecture">Architecture Overview</a></li>
+<li><a href="/wiki/wiki/QubesArchitecture">Architecture Overview</a>, and also the more recent: <a href="http://www.invisiblethingslab.com/resources/2014/Software_compartmentalization_vs_physical_separation.pdf">​Why Qubes OS is more than a bunch of VMs?</a></li>
 <li><a href="/wiki/wiki/SecurityGoals">Qubes Security Goals</a></li>
 <li><a href="/wiki/wiki/UserFaq">FAQ</a></li>
 <li><a href="/wiki/wiki/UserDoc">User Documentation</a></li>
