--- a/HCL.html
+++ b/HCL.html
@@ -215,6 +215,14 @@
 <p>R2B3</p>
 <p>3.7.4</p>
 <p><a href="https://groups.google.com/forum/#!msg/qubes-devel/xoyNCigBvFE/ER61L6TbVpwJ">​Zrubi</a></p>
+<p>Hewlett-Packard HP EliteBook 820 G1<br /> (CPU, Haswell, Intel HD Graphics)</p>
+<p>L71 Ver. 01.11</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>R2rc2</p>
+<p>3.12.23-1</p>
+<p><a href="https://groups.google.com/d/topic/qubes-users/8s98SegfdbI/discussion">​read more</a></p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/8s98SegfdbI/pIOWgeJSuSAJ">Mihai Genescu</a></p>
 <p>HP EliteBook 8540p<br /> (i5-2540M, Arrandale, NVIDIA GT216)</p>
 <p>F.0C</p>
 <p>Yes</p>
