--- a/HCL.html
+++ b/HCL.html
@@ -215,7 +215,15 @@
 <p>R2B3</p>
 <p>3.7.4</p>
 <p><a href="https://groups.google.com/forum/#!msg/qubes-devel/xoyNCigBvFE/ER61L6TbVpwJ">​Zrubi</a></p>
-<p>Hewlett-Packard HP EliteBook 820 G1<br /> (CPU, Haswell, Intel HD Graphics)</p>
+<p>HP EliteBook 2170p<br /> (i5-3317U, Ivy, Intel HD Graphics)</p>
+<p>68IMT Ver. F.42</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>R2rc2</p>
+<p>3.12.23-1</p>
+<p><a href="https://groups.google.com/d/topic/qubes-users/q5M9KbPatEA/discussion">​read more</a></p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/q5M9KbPatEA/fXIZ-yvJVA8J">Dimiter Georgiev</a></p>
+<p>HP EliteBook 820 G1<br /> (i5-4300U, Haswell, Intel HD Graphics)</p>
 <p>L71 Ver. 01.11</p>
 <p>Yes</p>
 <p>Yes</p>
