--- a/UserDoc.html
+++ b/UserDoc.html
@@ -69,6 +69,7 @@
 <li><a href="/wiki/wiki/HvmCreate">Creating and Using HVM and Windows Domains (Qubes R2 Only)</a></li>
 <li>External Links
 <ol>
+<li><a href="https://www.whonix.org/wiki/Qubes">​Creating Whonix HVMs in Qubes</a></li>
 <li><a href="https://groups.google.com/group/qubes-devel/msg/4015c8900a813985">​Creating NetBSD VM</a></li>
 </ol></li>
 </ol></li>
