--- a/UserDoc.html
+++ b/UserDoc.html
@@ -4,13 +4,14 @@
 <ol>
 <li><a href="/wiki/wiki/GettingStarted">Getting Started</a></li>
 <li><a href="/wiki/wiki/SecurityGuidelines">Security Guidelines</a></li>
-<li><a href="/wiki/wiki/BackupRestore">Backup, Restoration, and Migration</a></li>
+<li><a href="/wiki/wiki/Glossary">Glossary of Qubes Terminology</a></li>
 </ol></li>
-<li><strong>Domain Zero (dom0)</strong>
+<li><strong>Dom0</strong>
 <ol>
 <li><a href="/wiki/wiki/DomZeroTools">Dom0 Command-Line Tools</a></li>
 <li><a href="/wiki/wiki/SoftwareUpdateDom0">Updating Software in dom0</a></li>
 <li><a href="/wiki/wiki/CopyToDomZero">Copying Files to and from dom0</a></li>
+<li><a href="/wiki/wiki/BackupRestore">Backup, Restoration, and Migration</a></li>
 <li>Advanced Topics
 <ol>
 <li><a href="/wiki/wiki/AntiEvilMaid">Installing Anti Evil Maid</a></li>
@@ -18,7 +19,7 @@
 <li><a href="/wiki/wiki/ZFS">Installing ZFS in Qubes</a></li>
 </ol></li>
 </ol></li>
-<li><strong>Unprivileged Domains (domUs)</strong>
+<li><strong><a href="/wiki/wiki/DomUs">DomUs?</a></strong>
 <ol>
 <li><a href="/wiki/wiki/VmTools">DomU Command-Line Tools</a></li>
 <li><strong>Intra-VM Actions</strong>
@@ -32,7 +33,7 @@
 <li><a href="/wiki/wiki/CopyingFiles">Copying and Moving Files Between Domains</a></li>
 <li><a href="/wiki/wiki/UserDoc/SplitGpg">Using GPG more securely in Qubes: Split GPG tutorial</a></li>
 </ol></li>
-<li><strong>NetworkVMs and ProxyVMs (NetVMs and ProxyVMs)</strong>
+<li><strong>NetVMs and ProxyVMs</strong>
 <ol>
 <li><a href="/wiki/wiki/QubesFirewall">Understanding Qubes Firewall</a></li>
 <li><a href="/wiki/wiki/DataLeaks">Understanding and Preventing Data Leaks</a></li>
@@ -57,12 +58,12 @@
 <li><a href="https://groups.google.com/group/qubes-devel/msg/9d1ac581236ca9b4">​Extending `root.img` Size</a></li>
 </ol></li>
 </ol></li>
-<li><strong>DisposableVMs (DispVMs)</strong>
+<li><strong>DispVMs</strong>
 <ol>
 <li><a href="/wiki/wiki/DisposableVms">Disposable VMs</a></li>
 <li><a href="/wiki/wiki/UserDoc/DispVMCustomization">DispVM Customization</a></li>
 </ol></li>
-<li><strong>HardwareVMs (HVMs)</strong>
+<li><strong>HVMs</strong>
 <ol>
 <li><a href="/wiki/wiki/ResizeDiskImage">Resizing AppVM and HVM Disk Images</a></li>
 <li><a href="/wiki/wiki/LinuxHVMTips">Tips for Using Linux in an HVM</a></li>
