--- a/UserDoc.html
+++ b/UserDoc.html
@@ -19,7 +19,7 @@
 <li><a href="/wiki/wiki/ZFS">Installing ZFS in Qubes</a></li>
 </ol></li>
 </ol></li>
-<li><strong><a href="/wiki/wiki/DomUs">DomUs?</a></strong>
+<li><strong>DomUs</strong>
 <ol>
 <li><a href="/wiki/wiki/VmTools">DomU Command-Line Tools</a></li>
 <li><strong>Intra-VM Actions</strong>
