--- a/SecurityBulletins.html
+++ b/SecurityBulletins.html
@@ -5,23 +5,24 @@
 </ul>
 <h2 id="a2011">2011</h2>
 <ul>
-<li><a href="https://groups.google.com/d/msg/qubes-devel/kRQSQircYKk/KW1lihKLFjYJ">​Qubes Security Bulletin #1</a></li>
+<li><a href="https://groups.google.com/d/msg/qubes-devel/kRQSQircYKk/KW1lihKLFjYJ">​Qubes Security Bulletin #1</a> (Gui daemon bug, Intel VT-d escape on non-IR hardware)</li>
 </ul>
 <h2 id="a2012">2012</h2>
 <ul>
-<li><a href="https://groups.google.com/d/msg/qubes-devel/JIpZoQUP6dQ/g6TvtpUHzBQJ">​Qubes Security Bulletin #2</a></li>
-<li><a href="https://groups.google.com/group/qubes-devel/msg/2dece13ed1f9ad2d">​Qubes Security Bulletin #3</a></li>
-<li><a href="https://groups.google.com/group/qubes-devel/msg/28ecafd3c73ec1b0">​Qubes Security Bulletin #4</a></li>
-<li><a href="https://groups.google.com/group/qubes-devel/msg/add1e480d8642755">​Qubes Security Bulletin #5</a></li>
+<li><a href="https://groups.google.com/d/msg/qubes-devel/JIpZoQUP6dQ/g6TvtpUHzBQJ">​Qubes Security Bulletin #2</a> (Intel SYSRET bug)</li>
+<li><a href="https://groups.google.com/d/msg/qubes-devel/KM1jMCE5SZM/La350T7h7C0J">​Qubes Security Bulletin #3</a> (Xen hypervisor bugs: XSA 13, others with DoS potential)</li>
+<li><a href="https://groups.google.com/d/msg/qubes-devel/0y8ikKy5l7c/sME-x9Ov7CgJ">​Qubes Security Bulletin #4</a> (Qubes firewall misconfiguration: ipv6 allowed)</li>
+<li><a href="https://groups.google.com/d/msg/qubes-devel/pXADmQOMmvo/VSdk2IDk0a0J">​Qubes Security Bulletin #5</a> (Xen hypervisor bugs: XSA 29, others with DoS potential)</li>
 </ul>
 <h2 id="a2013">2013</h2>
 <ul>
-<li><a href="https://groups.google.com/group/qubes-devel/msg/9e2fb148f140e09a">​Qubes Security Bulletin #6</a></li>
-<li><a href="https://groups.google.com/d/msg/qubes-devel/KqZdbcgkTGU/YaTwNcQhcrgJ">​Qubes Security Bulletin #7</a></li>
-<li><a href="https://groups.google.com/d/msg/qubes-devel/xj9KAW5inQc/YOrhOAQ7HU0J">​Qubes Security Bulletin #8</a></li>
+<li><a href="https://groups.google.com/d/msg/qubes-devel/UirCw7R3Muo/muBA8UixL54J">​Qubes Security Bulletin #6</a> (Xen hypervisor bugs: XSA 50, others with DoS potential)</li>
+<li><a href="https://groups.google.com/d/msg/qubes-devel/KqZdbcgkTGU/YaTwNcQhcrgJ">​Qubes Security Bulletin #7</a> (Xen hypervisor bugs: XSA 57 potential escalation, also XSA 52-54 with potential leaks)</li>
+<li><a href="https://groups.google.com/d/msg/qubes-devel/xj9KAW5inQc/YOrhOAQ7HU0J">​Qubes Security Bulletin #8</a> (Xen hypervisor bugs: XSA 45,58 potential DoS)</li>
 </ul>
 <h2 id="a2014">2014</h2>
 <ul>
-<li><a href="https://groups.google.com/d/msg/qubes-devel/XgTo6L8-5XA/JLOadvBqnqMJ">​Qubes Security Bulletin #9</a></li>
-<li><a href="https://groups.google.com/d/msg/qubes-devel/VO1URqYWbok/8vp-VnE7iXEJ">​Qubes Security Bulletin #10</a></li>
+<li><a href="https://groups.google.com/d/msg/qubes-devel/XgTo6L8-5XA/JLOadvBqnqMJ">​Qubes Security Bulletin #9</a> (Qubes qvm-open-in-[d]vm environment inter-VM leak)</li>
+<li><a href="https://groups.google.com/d/msg/qubes-devel/VO1URqYWbok/8vp-VnE7iXEJ">​Qubes Security Bulletin #10</a> (Qubes pulseaudio &amp; vchan bugs, Xen XSA 87)</li>
+<li><a href="https://groups.google.com/d/msg/qubes-devel/QHXI0qXAPhk/gSF7m4KD37QJ">​Qubes Security Bulletin #11</a> (Qubes clipboard inter-VM leak)</li>
 </ul>
